apps/llamacpp/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: llamacpp
  namespace: llamacpp
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`llm.licht`)
      services:
        - name: llamacpp
          port: http
  tls:
    secretName: llamacpp-tls
